--- a/app/views/profile/about.html.erb
+++ b/app/views/profile/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About Me</h1>
-<p>Welcome to my about page. Here you can learn more about my background and services.</p>
+<div class="container text-center">
+    <h1>About Me</h1>
+    <p>Welcome to my about page. Here you can learn more about my background and services.</p>
+</div>
