--- a/app/views/profile/contact.html.erb
+++ b/app/views/profile/contact.html.erb
@@ -1,2 +1,4 @@
-<h1>Contact</h1>
-<p>Get in touch with me at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
+<div class="container text-center">
+    <h1>Contact</h1>
+    <p>Get in touch with me at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
+</div>
