--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -1,6 +1,4 @@
-<div class="">
-<h1>Ezra Stolow Massage Therapy</h1>
-
-<div class="container">
+<div class="container text-center">
+    <h1>Ezra Stolow Massage Therapy</h1>
     <img src="<%= asset_path 'Ezra Stolow Massage Therapy.jpg' %>" alt="Ezra Stolow Massage Therapy" width="600px">
 </div>
