updated home page

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container text-center mt-2 mb-3">
     <h1>Massothérpie Thérapeutique</h1>
+    <h1>Ezra Stolow</h1>
 </div>
 
 <div class="container text-center">
