updated home page

--- a/app/views/profiles/contact.html.erb
+++ b/app/views/profiles/contact.html.erb
@@ -1,10 +1,13 @@
 <div class="container text-center">
     <h1>Contact</h1>
     <p>
-        Location: 
+        <i class="fa-solid fa-location-dot"></i> 
         <a href="https://www.google.com/maps/place/551+Rue+Berry,+Lachute,+QC+J8H+1S4/@45.6564411,-74.3387477,15.21z/data=!4m15!1m8!3m7!1s0x4ccedbdafe5f759b:0xfc037845d8df58f9!2s551+Rue+Berry,+Lachute,+QC+J8H+1S4!3b1!8m2!3d45.6566755!4d-74.3333024!16s%2Fg%2F11bz_yykhy!3m5!1s0x4ccedbdafe5f759b:0xfc037845d8df58f9!8m2!3d45.6566755!4d-74.3333024!16s%2Fg%2F11bz_yykhy?entry=ttu&g_ep=EgoyMDI1MDMxOS4yIKXMDSoASAFQAw%3D%3D" target="_blank">
-            551 rue Berry, Lachute, QC, CA J7P 4W9
+            551 rue Berry,
+            Lachute, QC,
+            J7P 4W9
         </a>
     </p>
-    <p>Phone: (450) 613-0090</p>
+
+    <p><i class="fa-solid fa-phone"></i> (450) 613-0090</p>
 </div>
