--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,14 +1,15 @@
-html, body {
+body {
   max-width: 100%;
   overflow-x: hidden; /* Corrected */
 }
 
 /* Image Styles */
 img {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 350px;
   display: block;
   object-fit: cover; /* Adjust this based on needs */
+  object-position: top;
   margin: 0 auto;
 }
 
