--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -3,6 +3,6 @@
     <h1>Ezra Stolow</h1>
 </div>
 
-<div class="container text-center">
-    <img src="<%= asset_path 'ezra-selfie.jpg' %>" alt="Ezra Stolow">
+<div class="text-center">
+    <img src="<%= asset_path 'ezra-massotherapie.jpg' %>" alt="Ezra Stolow">
 </div>
