--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,8 +1,5 @@
-<div class="container text-center mt-2 mb-3">
+<div class="container text-center mt-2">
     <h1>MASSOTHÉRAPIE THÉRAPEUTIQUE</h1>
     <h1>Ezra Stolow</h1>
 </div>
 
-<div class="text-center">
-    <img src="<%= asset_path 'ezra-massotherapie.jpg' %>" alt="Ezra Stolow">
-</div>
