--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,33 +36,31 @@
   <body>
     <%= yield %>
 
-    <div class="container">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
-            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+    <footer class="d-flex flex-column align-items-center py-3 border-top">
+      <ul class="nav list-unstyled d-flex justify-content-center mb-2">
+        <li class="mx-2">
+          <a class="facebook-footer" href="https://www.facebook.com/profile.php?id=100092381130477" target="_blank">
+            <i class="fa-brands fa-facebook fa-lg"></i>
           </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">© 2025 Massothérapie Thérapeutique Ezra Stolow</span>
-        </div>
+        </li>
+        <li class="mx-2">
+          <a class="instagram-footer" href="#" target="_blank">
+            <i class="fa-brands fa-instagram fa-lg"></i>
+          </a>
+        </li>
+        <li class="mx-2">
+          <a class="x-footer" href="#" target="_blank">
+            <i class="fa-brands fa-x-twitter fa-lg"></i>
+          </a>
+        </li>
+      </ul>
 
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3">
-            <a class="facebook-footer" href="https://www.facebook.com/profile.php?id=100092381130477" target="_blank">
-              <i class="fa-brands fa-facebook"></i>
-            </a>
-          </li>
-          <li class="ms-3">
-            <a class="instagram-footer" href="#" target="_blank">
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-          </li>
-          <li class="ms-3">
-            <a class="x-footer" href="#" target="_blank">
-              <i class="fa-brands fa-x-twitter"></i>
-            </a>
-          </li>
-        </ul>
-      </footer>
-    </div>
+      <div class="text-center">
+        <a href="/" class="text-body-secondary text-decoration-none lh-1">
+          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+        <span class="text-body-secondary">© 2025 Massothérapie Thérapeutique Ezra Stolow</span>
+      </div>
+    </footer>
   </body>
 </html>
