--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,11 @@
   width: 30px;
 }
 
+.ezra-hands-img {
+  max-width: 350px; /* Adjust width */
+  height: 500px; /* Maintain aspect ratio */
+}
+
 body {
   max-width: 100%;
   overflow-x: hidden; /* Prevents horizontal scrolling */
