--- a/app/views/profiles/about.html.erb
+++ b/app/views/profiles/about.html.erb
@@ -1,4 +1,13 @@
 <div class="container text-center">
     <h1>About Me</h1>
-    <p>Welcome to my about page. Here you can learn more about my background and services.</p>
+</div>
+
+<div class="row featurette mt-3">
+    <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
+        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+    </div>
+        <div class="col-md-5 order-md-1">
+        <img src="<%= asset_path('ezra-selfie.jpg') %>" class="img-fluid mx-auto d-block" width="400" height="400" alt="Ezra Stolow">
+    </div>
 </div>
