--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -3,3 +3,17 @@
     <h1>Ezra Stolow</h1>
 </div>
 
+<div class="container">
+    <div class="row featurette mt-3">
+        <div class="col-md-7">
+            <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. 
+                <span class="text-body-secondary">See for yourself.</span>
+            </h2>
+            <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        </div>
+        <div class="col-md-5">
+            <img src="<%= asset_path('ezra-hands.jpg') %>" class="img-fluid mx-auto d-block ezra-hands-img" alt="Ezra Stolow">  
+        </div>
+    </div>
+</div>
+
