--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -3,7 +3,11 @@
     <h1>Ezra Stolow</h1>
 </div>
 
-<div class="container">
+<div class="banner">
+    <img src="<%= asset_path('ezra-massotherapie.jpg') %>" class="" alt="Banner img">
+</div>
+
+<div class="container mt-2">
     <div class="row featurette mt-3">
         <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. 
