--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,13 @@
   width: 30px;
 }
 
+.banner-img {
+  width: 100%;
+  height: 195px; /* Ensures aspect ratio is preserved */
+  object-fit: cover;
+  object-position: 50% 7%;
+}
+
 .ezra-hands-img {
   max-width: 350px; /* Adjust width */
   height: 500px; /* Maintain aspect ratio */
