--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-column align-items-center py-3 border-top">
+<footer class="d-flex flex-column align-items-center mt-3 py-3 border-top">
       <ul class="nav list-unstyled d-flex justify-content-center mb-2">
         <li class="mx-2">
           <a class="facebook-footer" href="https://www.facebook.com/profile.php?id=100092381130477" target="_blank">
