--- a/app/views/profiles/about.html.erb
+++ b/app/views/profiles/about.html.erb
@@ -4,8 +4,9 @@
 
 <div class="row featurette mt-3">
     <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Hey, i'm Ezra.<span class="text-body-secondary">.</span></h2>
+        <p class="lead">I specialize in a variety of targeted massage techniques to help individuals alleviate targeted and chronic pain</p>
+        <p>Call me to book your appointment now.</p>
     </div>
         <div class="col-md-5 order-md-1">
         <img src="<%= asset_path('ezra-selfie.jpg') %>" class="img-fluid mx-auto d-block" width="400" height="400" alt="Ezra Stolow">
