--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -7,18 +7,51 @@
         <img src="<%= asset_path('ezra-massotherapie.jpg') %>" alt="Banner img" class="banner-img">
     </div>
 
-    <div class="mt-2">
+    <div class="banner">
+        <div class="assurance banner">
+            <hr>
+                <p>Recu d'assurence et membre AMQ</p>
+            <hr>
+        </div>
+    </div>
+
+    <div class="mt-2 text-center">
         <div class="row featurette mt-3">
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. 
-                    <span class="text-body-secondary">See for yourself.</span>
+                <h2 class="featurette-heading fw-normal lh-1">Massage Thérapeutique Specific. 
+                    <span class="text-body-secondary">Approach Ostéopathic</span>
                 </h2>
-                <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+                <p class="lead">Spécialisé en Blessure et Douleurs Chroniques</p>
             </div>
             <div class="col-md-5">
                 <img src="<%= asset_path('ezra-hands.jpg') %>" class="img-fluid mx-auto d-block ezra-hands-img" alt="Ezra Stolow">  
             </div>
         </div>
     </div>
+</div>
+
+<div id="carouselExample" class="carousel slide mt-3" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag "drainage-lymphatique.jpg", class: "d-block w-75 mx-auto", alt: "Image 1" %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag "Gua sha.jpg", class: "d-block w-75 mx-auto", alt: "Image 2" %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag "faciatherapie.jpg", class: "d-block w-75 mx-auto", alt: "Image 3" %>
+    </div>
+  </div>
+
+
+  <button class="carousel-control-prev bg-dark rounded-circle p-2 position-absolute" type="button" data-bs-target="#carouselExample" data-bs-slide="prev"
+    style="width: 40px; height: 40px; top: 50%; transform: translateY(-50%); left: 10px;">
+    <span class="carousel-control-prev-icon" style="width: 20px; height: 20px;"></span>
+  </button>
+
+  <button class="carousel-control-next bg-dark rounded-circle p-2 position-absolute" type="button" data-bs-target="#carouselExample" data-bs-slide="next"
+    style="width: 40px; height: 40px; top: 50%; transform: translateY(-50%); right: 10px;">
+    <span class="carousel-control-next-icon" style="width: 20px; height: 20px;"></span>
+  </button>
 </div>
 
