updated index page and CSS

--- a/app/views/profiles/about.html.erb
+++ b/app/views/profiles/about.html.erb
@@ -2,7 +2,7 @@
     <h1>About Me</h1>
 </div>
 
-<div class="row featurette mt-3">
+<div class="row featurette text-center mt-3">
     <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading fw-normal lh-1">Hey, i'm Ezra.<span class="text-body-secondary">.</span></h2>
         <p class="lead">I specialize in a variety of targeted massage techniques to help individuals alleviate targeted and chronic pain</p>
