--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@ body {
 /* Image Styles */
 img {
   width: 100%;
-  height: 350px;
+  height: 400px;
   display: block;
   object-fit: cover;
   object-position: top;
@@ -48,6 +48,13 @@ h1 {
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   font-style: italic;
+}
+
+.carousel-img {
+  width: 100%; /* Ensures image scales with carousel width */
+  height: 400px; /* Adjust this height as needed */
+  object-fit: contain; /* Ensures the entire image is visible without cropping */
+  background-color: rgb(255, 255, 255); /* Optional: Adds a background color if the image doesn't fully cover the area */
 }
 
 /* Navigation Icons */
