--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,7 +1,3 @@
-<%# <div class="container text-center mt-2">
-    <h1>MASSOTHÉRAPIE THÉRAPEUTIQUE</h1>
-    <h1>Ezra Stolow</h1>
-</div> %>
 <div class="container">
     <div class="banner">
         <img src="<%= asset_path('ezra-massotherapie.jpg') %>" alt="Banner img" class="banner-img">
@@ -18,9 +14,8 @@
     <div class="mt-2 text-center">
         <div class="row featurette mt-3">
             <div class="col-md-7">
-                <h2 class="featurette-heading fw-normal lh-1">Massage Thérapeutique Specific.<br> 
-                    <span class="text-body-secondary">Approach Ostéopathic</span>
-                </h2>
+                <h2 class="featurette-heading fw-normal lh-1">Massage Thérapeutique Specific.</h2>
+                    <h2 class="text-body-secondary mt-2">Approach Ostéopathic</h2>
                 <p class="lead">Spécialisé en Blessure et Douleurs Chroniques</p>
                 <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
             </div>
