--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -6,7 +6,7 @@
     <div class="banner">
         <div class="assurance banner">
             <hr>
-                <p>Reçu d'assurence et membre AMQ</p>
+                <p>Reçu d'Assurence et membre AMQ</p>
             <hr>
         </div>
     </div>
@@ -16,7 +16,7 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading fw-normal lh-1">Massothérapie Thérapeutique Specific.</h2>
                     <h2 class="text-body-secondary mt-2">Approach Ostéopathique</h2>
-                <p class="lead">Spécialisé en Blessure et Douleurs Chroniques</p>
+                <p class="lead">Spécialisé en Blessures et Douleurs Chroniques</p>
                 <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
             </div>
             <div class="col-md-5">
