--- a/app/views/profiles/about.html.erb
+++ b/app/views/profiles/about.html.erb
@@ -4,9 +4,9 @@
 
 <div class="row featurette text-center mt-3">
     <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading fw-normal lh-1">Hey, i'm Ezra.<span class="text-body-secondary">.</span></h2>
-        <p class="lead">I specialize in a variety of targeted massage techniques to help individuals alleviate targeted and chronic pain</p>
-        <p>Call me to book your appointment now.</p>
+        <h2 class="featurette-heading fw-normal lh-1">Salut, moi, c'est Ezra.<span class="text-body-secondary">.</span></h2>
+        <p class="lead">Je me spécialise dans différentes techniques de massage ciblées pour aider à soulager les douleurs chroniques et localisées.</p>
+        <p>Appelle-moi pour prendre rendez-vous dès maintenant.</p>
     </div>
         <div class="col-md-5 order-md-1">
         <img src="<%= asset_path('ezra-selfie.jpg') %>" class="img-fluid mx-auto d-block" width="400" height="400" alt="Ezra Stolow">
