--- a/app/views/profiles/about.html.erb
+++ b/app/views/profiles/about.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-    <h1>About Me</h1>
+    <h1>À Propos</h1>
 </div>
 
 <div class="row featurette text-center mt-3">
